[project]
name = "mcp-bootstrap"
version = "0.1.0"
description = "Minimal MCP bootstrap: research server + Gemini client for learning Model Context Protocol"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arxiv>=4.0.0",
    "google-genai>=2.12.1",
    "mcp>=1.28.1",
    "python-dotenv>=1.2.2",
]
